# ani-tui

./: .env  .gitignore  AGENTS.md  ASCII-TEXT.txt  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMAGE_RENDERING.md  INSTALL.md  KEYBINDINGS.md  README.md  config.toml.example  daytona.yaml  test-allanime.rs  test-formula-fallback.rb  test-formula.rb
.githooks/: pre-commit
.github/workflows/: brew-audit.yml  ci.yml  daytona-test.yml  release.yml
Formula/: ani-tui.rb
docs/: CHANGELOG.md  IMAGE_RENDERING.md  image_rendering.md
macos/: ani-tui
openspec/changes/fix-image-preview-cross-platform/: design.md  proposal.md  tasks.md
openspec/changes/fix-image-preview-cross-platform/specs/image-preview-display/: spec.md
openspec/changes/fix-image-preview-layout/: design.md  proposal.md  tasks.md
openspec/changes/fix-image-preview-layout/specs/portrait-image-preview/: spec.md
openspec/changes/fix-vietnamese-source-issues/: design.md  proposal.md  tasks.md
openspec/changes/fix-vietnamese-source-issues/specs/fix-image-preview/: spec.md
openspec/changes/fix-vietnamese-source-issues/specs/kkphim-episode-fix/: spec.md
openspec/changes/fix-vietnamese-source-issues/specs/single-source-selection/: spec.md
openspec/changes/fix-vietnamese-source-issues/specs/vietnamese-metadata/: spec.md
openspec/changes/fix-vietnamese-source-issues/specs/vietnamese-streaming/: spec.md
packaging/homebrew/: ani-tui.rb  ani-tui.rb.template
packaging/homebrew-tap/: ani-tui.rb
packaging/linux/: install.sh
packaging/macos/: install.sh
packaging/scoop/: ani-tui.json
packaging/windows/: README.md  diagnose.ps1  fix-execution.ps1  install-all.bat  install-complete.ps1  install-curl.bat  install-easy.ps1  install.bat  install.ps1  installer.rs
scripts/: daytona-test.sh  generate-homebrew-formula.rb  update-image-docs.sh
src/: config.rs  db.rs  error.rs  image_manager.rs  lib.rs  main.rs  player.rs  update.rs
src/image/: mod.rs
src/metadata/: mod.rs
src/providers/: AGENTS.md  allanime.rs  aniwatch.rs  gogoanime.rs  hike.rs  kkphim.rs  mod.rs  nguonc.rs  ophim.rs  prowlarr.rs
src/ui/: AGENTS.md  app.rs  ascii_art.rs  components.rs  image_display.rs  image_renderer.rs  mod.rs  modern_components.rs  player_controller.rs  screens.rs
src/ui/components/: episode_grid.rs  mod.rs
windows/: ani-tui-core.ps1  ani-tui.cmd  ani-tui.ps1  install-windows.ps1
